# Sarvam-MCP

./: .env  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  sarvam_mcp.py
tests/: test_sarvam_mcp.py
